--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,10 +1,7 @@
 {
   "name": "api",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "version": "0.1.0",
   "private": true,
-  "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -13,6 +10,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "dev": "nest start --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -21,19 +19,34 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "3.128.0",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mongoose": "9.2.0",
     "@nestjs/platform-express": "^9.0.0",
+    "argon2": "0.28.7",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.13.2",
+    "cookie-parser": "1.4.6",
+    "file-type": "16.5.3",
+    "mongoose": "6.4.4",
+    "morgan": "1.10.0",
+    "nanoid": "3.3.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
+    "prettier-config": "workspace:*",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/cookie-parser": "1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
+    "@types/morgan": "1.9.3",
+    "@types/multer": "1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
