--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,22 +23,30 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "9.0.0",
     "@nestjs/mongoose": "9.2.0",
+    "@nestjs/passport": "9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "argon2": "0.28.7",
+    "axios": "0.27.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "cookie-parser": "1.4.6",
     "file-type": "16.5.3",
     "mongoose": "6.4.4",
     "morgan": "1.10.0",
+    "ms": "2.1.3",
     "nanoid": "3.3.4",
+    "passport": "0.6.0",
+    "passport-github2": "0.1.12",
+    "passport-google-oauth20": "2.0.0",
+    "passport-jwt": "4.0.0",
+    "passport-local": "1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "prettier-config": "workspace:*",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -48,6 +56,10 @@
     "@types/morgan": "1.9.3",
     "@types/multer": "1.4.7",
     "@types/node": "^16.0.0",
+    "@types/passport-github2": "1.2.5",
+    "@types/passport-google-oauth20": "2.0.11",
+    "@types/passport-jwt": "3.0.6",
+    "@types/passport-local": "1.0.34",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -56,6 +68,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.2",
     "prettier": "^2.3.2",
+    "prettier-config": "workspace:*",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.5",
