--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,11 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^16.0.0",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
     "eslint": "^8.0.1",
-    "eslint-config-next": "12.2.2"
+    "eslint-config-next": "12.2.2",
+    "typescript": "^4.3.5"
   }
 }
