--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,11 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "2.2.4",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@fontsource/noto-sans": "4.5.10",
+    "@hookform/resolvers": "2.9.5",
+    "axios": "0.27.2",
+    "framer-motion": "^6",
+    "js-cookie": "3.0.1",
+    "jsonwebtoken": "8.5.1",
+    "libphonenumber-js": "1.10.8",
     "next": "12.2.2",
+    "polished": "4.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.33.1",
+    "react-icons": "4.4.0",
+    "react-query": "3.39.1",
+    "yup": "0.32.11"
   },
   "devDependencies": {
+    "@svgr/webpack": "6.2.1",
+    "@types/js-cookie": "3.0.2",
+    "@types/jsonwebtoken": "8.5.8",
     "@types/node": "^16.0.0",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
