--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -32,11 +32,13 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "cookie-parser": "1.4.6",
+    "ejs": "3.1.8",
     "file-type": "16.5.3",
     "mongoose": "6.4.4",
     "morgan": "1.10.0",
     "ms": "2.1.3",
     "nanoid": "3.3.4",
+    "nodemailer": "6.7.7",
     "passport": "0.6.0",
     "passport-github2": "0.1.12",
     "passport-google-oauth20": "2.0.0",
@@ -56,6 +58,7 @@
     "@types/morgan": "1.9.3",
     "@types/multer": "1.4.7",
     "@types/node": "^16.0.0",
+    "@types/nodemailer": "6.4.4",
     "@types/passport-github2": "1.2.5",
     "@types/passport-google-oauth20": "2.0.11",
     "@types/passport-jwt": "3.0.6",
