--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "husky": "^8.0.0",
     "prettier": "latest",
     "prettier-config": "workspace:*",
-    "turbo": "latest"
+    "turbo": "latest",
+    "test": "latest"
   },
   "engines": {
     "npm": ">=7.0.0",
