--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
     "test": "turbo run test",
+    "prod": "turbo run prod",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "prepare": "husky install",
     "cm": "custom-commit"
