--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,3 +24,25 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           source: '.'
           target: '/var/www/vhosts/authentication-app'
+
+      - name: 🔥 Start The App
+        uses: appleboy/ssh-action@master
+        env:
+          USERNAME: ${{ secrets.USERNAME }}
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          port: ${{ secrets.PORT }}
+          key: ${{ secrets.KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          envs: USERNAME
+          script: |
+            export PATH=$PATH:/home/$USERNAME/.local/share/pnpm
+            export NVM_DIR=~/.nvm
+            source ~/.nvm/nvm.sh
+            cd /var/www/vhosts/authentication-app
+            pnpm install
+            pm2 restart authentication-app
+          #pm2 list
+          #pnpm list
+          # . ~/.profile
