--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
     "test": "turbo run test",
+    "prod": "turbo run prod",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "prepare": "husky install",
     "cm": "custom-commit"
@@ -26,8 +27,7 @@
     "husky": "^8.0.0",
     "prettier": "latest",
     "prettier-config": "workspace:*",
-    "turbo": "latest",
-    "test": "latest"
+    "turbo": "latest"
   },
   "engines": {
     "npm": ">=7.0.0",
